<resources>
    <string name="app_name">My Application</string>
    <string name="txt_titulo">Aplicativo Lista VIP devandroid.estefania.applista.model.Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_telefone_contato">Telefone de Contato</string>
    <string name="txt_hint_edit_nome_curso_desejado">Nome do devandroid.estefania.applista.model.Curso Desejado</string>
    <string name="text_button_salvar">SALVAR</string>
    <string name="text_button_limpar">LIMPAR</string>
    <string name="text_button_finalizar">FINALIZAR</string>
</resources>